apps/production/client-sites/camila-duque/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: camila-duque
  namespace: lulo-demo-landings
  labels:
    app: camila-duque
spec:
  replicas: 1
  selector:
    matchLabels:
      app: camila-duque
  template:
    metadata:
      labels:
        app: camila-duque
        name: camila-duque
    spec:
      containers:
      - name: camila-duque
        image: "registry.yesidlopez.de/camila-duque:v0.0.1" # {"$imagepolicy": "lulo-demo-landings:camila-duque"}
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 20
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "300m"
      imagePullSecrets:
        - name: registry-secret
