apps/production/client-sites/camila-duque/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: camila-duque
  name: camila-duque
  namespace: lulo-demo-landings
spec:
  selector:
    app: camila-duque
  type: ClusterIP
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
