apps/production/client-sites/camila-duque/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: camila-duque
  namespace: lulo-demo-landings
  annotations:
    cert-manager.io/cluster-issuer: luloai-issuer
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    external-dns.alpha.kubernetes.io/target: homelab.luloai.com
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - camila-duque.demo.luloai.com
      secretName: camila-duque-tls
  rules:
    - host: camila-duque.demo.luloai.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: camila-duque
                port:
                  number: 3000
